setup the jwtservice

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "jwt":{
+    "Key":"932j0e892j8ejdidiojwi",
+    "Issuer":"SchoolAPI",
+    "Audience": "SchoolAPIUsers",
+    "DurationInMinutes": 60
+
+  }
+
 }
