creating student controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,6 +13,9 @@
     "Audience": "SchoolAPIUsers",
     "DurationInMinutes": 60
 
+  },
+  "DefaultConnection":{
+    "connectionString":"wiqeoij23o4e82jqwmel3wew"
   }
 
 }
